--- a/Parstagram/Base.lproj/Main.storyboard
+++ b/Parstagram/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -10,7 +10,7 @@
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="Parstagram" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" id="BYZ-38-t0r" customClass="LoginViewController" customModule="Parstagram" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -158,7 +158,7 @@
         <!--Navigation Controller-->
         <scene sceneID="ikr-8x-RI6">
             <objects>
-                <navigationController modalPresentationStyle="fullScreen" id="T32-yo-5Bo" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="FeedNavigationController" modalPresentationStyle="fullScreen" id="T32-yo-5Bo" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="sjc-VW-76X">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -184,19 +184,19 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostTableViewCell" rowHeight="414" id="wfy-8O-Xdd" customClass="PostTableViewCell" customModule="Parstagram" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="PostTableViewCell" rowHeight="414" id="wfy-8O-Xdd" customClass="PostTableViewCell" customModule="Parstagram" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="414"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wfy-8O-Xdd" id="xdH-Wz-a9g">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="414"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dfi-yN-GKh">
-                                                    <rect key="frame" x="20" y="359" width="42" height="24"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dfi-yN-GKh">
+                                                    <rect key="frame" x="28" y="376" width="96" height="19"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="42" id="QOy-aM-30n"/>
+                                                        <constraint firstAttribute="width" constant="96" id="IzX-qj-lVR"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -206,10 +206,11 @@
                                                         <constraint firstAttribute="width" secondItem="4Cx-QR-mhC" secondAttribute="height" multiplier="94:85" id="h3M-jQ-e5S"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="byt-eS-IJ9">
-                                                    <rect key="frame" x="93" y="359" width="313" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="byt-eS-IJ9">
+                                                    <rect key="frame" x="151" y="376" width="255" height="19"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="8Mx-YT-53d"/>
+                                                        <constraint firstAttribute="width" constant="265" id="osp-pk-MAQ"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -218,11 +219,11 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="bottomMargin" secondItem="dfi-yN-GKh" secondAttribute="bottom" constant="8" id="4ny-ky-Ccu"/>
+                                                <constraint firstAttribute="trailing" secondItem="byt-eS-IJ9" secondAttribute="trailing" constant="8" id="D6w-cm-0zr"/>
                                                 <constraint firstItem="byt-eS-IJ9" firstAttribute="leading" secondItem="dfi-yN-GKh" secondAttribute="trailing" constant="27" id="HRs-Ux-Aly"/>
                                                 <constraint firstItem="dfi-yN-GKh" firstAttribute="leading" secondItem="xdH-Wz-a9g" secondAttribute="leadingMargin" constant="8" id="Ky2-7w-VYX"/>
                                                 <constraint firstItem="4Cx-QR-mhC" firstAttribute="leading" secondItem="xdH-Wz-a9g" secondAttribute="leading" constant="8" id="MJU-Ph-uys"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="byt-eS-IJ9" secondAttribute="bottom" constant="8" id="PaK-0Z-5Pn"/>
-                                                <constraint firstItem="byt-eS-IJ9" firstAttribute="trailing" secondItem="4Cx-QR-mhC" secondAttribute="trailing" id="TX8-jn-ddw"/>
                                                 <constraint firstItem="byt-eS-IJ9" firstAttribute="top" secondItem="4Cx-QR-mhC" secondAttribute="bottom" constant="8" id="UWd-vk-YPN"/>
                                                 <constraint firstItem="4Cx-QR-mhC" firstAttribute="top" secondItem="xdH-Wz-a9g" secondAttribute="top" constant="8" id="kEd-3d-Dq0"/>
                                                 <constraint firstItem="dfi-yN-GKh" firstAttribute="leading" secondItem="xdH-Wz-a9g" secondAttribute="leadingMargin" constant="8" id="qmk-c9-9rf"/>
@@ -237,6 +238,72 @@
                                             <outlet property="usernameLabel" destination="dfi-yN-GKh" id="4hw-zo-y8B"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommentCellTableViewCell" id="vJ6-HX-4Jb" customClass="CommentCellTableViewCell" customModule="Parstagram" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="442" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vJ6-HX-4Jb" id="QxT-gX-IMW">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j2a-Xm-jfO">
+                                                    <rect key="frame" x="28" y="11" width="96" height="21.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="96" id="2vV-Op-YAB"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is a comment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bvb-d9-AcB">
+                                                    <rect key="frame" x="151" y="11" width="255" height="21.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="265" id="hdT-Nh-TSg"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="bvb-d9-AcB" firstAttribute="bottom" secondItem="QxT-gX-IMW" secondAttribute="bottomMargin" id="5Jw-wK-Apb"/>
+                                                <constraint firstItem="j2a-Xm-jfO" firstAttribute="leading" secondItem="QxT-gX-IMW" secondAttribute="leadingMargin" constant="8" id="9CJ-wd-LD6"/>
+                                                <constraint firstItem="bvb-d9-AcB" firstAttribute="top" secondItem="QxT-gX-IMW" secondAttribute="topMargin" id="K8z-aG-Paf"/>
+                                                <constraint firstItem="j2a-Xm-jfO" firstAttribute="top" secondItem="QxT-gX-IMW" secondAttribute="topMargin" id="Rns-Lh-HJn"/>
+                                                <constraint firstItem="bvb-d9-AcB" firstAttribute="leading" secondItem="j2a-Xm-jfO" secondAttribute="trailing" constant="27" id="dHY-iM-Q44"/>
+                                                <constraint firstAttribute="trailing" secondItem="bvb-d9-AcB" secondAttribute="trailing" constant="8" id="dve-tl-HWF"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="j2a-Xm-jfO" secondAttribute="bottom" id="yDN-BS-9PS"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="commentLabel" destination="bvb-d9-AcB" id="M9u-hq-eHP"/>
+                                            <outlet property="nameLabel" destination="j2a-Xm-jfO" id="z4f-OA-vJG"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="AddCommentCell" id="3EA-oB-idX">
+                                        <rect key="frame" x="0.0" y="485.5" width="414" height="59.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3EA-oB-idX" id="GKP-tA-NNJ">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="59.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add a comment..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="31W-oO-4px">
+                                                    <rect key="frame" x="28" y="19" width="358" height="21.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="135" id="QzQ-tI-fZu"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="31W-oO-4px" firstAttribute="top" secondItem="GKP-tA-NNJ" secondAttribute="topMargin" constant="8" id="5xt-wz-mCD"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="31W-oO-4px" secondAttribute="trailing" constant="8" id="M3H-ec-ZSi"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="31W-oO-4px" secondAttribute="bottom" constant="8" id="VcW-We-Ab2"/>
+                                                <constraint firstItem="31W-oO-4px" firstAttribute="leading" secondItem="GKP-tA-NNJ" secondAttribute="leadingMargin" constant="8" id="Xur-aw-og1"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
@@ -244,6 +311,11 @@
                         <viewLayoutGuide key="safeArea" id="ZNs-Se-dsk"/>
                     </view>
                     <navigationItem key="navigationItem" id="56H-eZ-I6y">
+                        <barButtonItem key="leftBarButtonItem" title="Logout" id="gWD-1K-Pge">
+                            <connections>
+                                <action selector="onLogoutButton:" destination="igx-yc-Oug" id="X4K-g8-DCY"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Item" image="LaunchImage" id="Mlc-F5-Rbq">
                             <connections>
                                 <segue destination="ANH-iC-yTK" kind="presentation" id="VIe-wM-SoH"/>
